--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,34 @@
-geopandas
-shapely
-fiona
-requests
-laspy
-matplotlib
-pyproj
-pandas
-rasterio
+# ============================================================================
+# DGT Rasters - Dependências Python
+# Projeto criado com apoio de GitHub Copilot AI
+# ============================================================================
+
+# Geospatial Core
+geopandas>=1.0.0
+shapely>=2.0.0
+fiona>=1.9.0
+pyproj>=3.7.0
+rasterio>=1.4.0
+
+# Data Processing
+pandas>=2.0.0
+numpy>=1.24.0
+
+# HTTP & API
+requests>=2.32.0
+beautifulsoup4>=4.14.0
+
+# GUI
+tkintermapview>=1.29
+customtkinter>=5.2.0
+pillow>=12.0.0
+
+# LiDAR Processing
+laspy>=2.6.0
+
+# Utilities
+pyshp>=3.0.0
+pyperclip>=1.11.0
+
+# Windows Support
+pywin32>=311; sys_platform == 'win32'
